...
        android:id="@+id/scrollVw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/mbackdrop"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/colorYellow"
            android:contentDescription="@string/background_movie"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_marginTop="30dp"
            android:contentDescription="@string/background_movie"
            android:adjustViewBounds="true"
            android:src="@drawable/bg_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title" />

        <ImageView
            android:id="@+id/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_border_1"
...
            app:layout_constraintBottom_toBottomOf="@+id/Like"
            app:layout_constraintEnd_toEndOf="@+id/border"
            app:layout_constraintTop_toTopOf="@+id/Like" />


        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:id="@+id/favourite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="@id/rectangle"
            app:layout_constraintBottom_toBottomOf="@+id/Like"
            app:layout_constraintStart_toEndOf="@+id/Like"
...
            app:layout_constraintTop_toTopOf="@id/wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="387dp" />

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="240dp"
            android:layout_marginTop="35dp"
            android:elevation="20dp"
            android:contentDescription="@string/poster_movie"
            android:scaleType="fitXY"
...
            android:layout_marginStart="30dp"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/overview"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genres" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="1dp"
...
            android:id="@+id/textgen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/release"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Like" />

        <TextView
...
            app:layout_constraintBottom_toTopOf="@+id/line_white"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:contentDescription="@string/language" />

        <TextView
            android:id="@+id/tv_item_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/language"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
...
            android:src="@drawable/ic_star_black"
            app:layout_constraintBottom_toTopOf="@+id/line_white"
            app:layout_constraintEnd_toEndOf="@+id/line_white"
            android:contentDescription="@string/rating" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue_reg"
            android:text="@string/rating"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
...
