...
    <string name="fetch">Fetch</string>
    <string name="empty">Empty</string>
    <string name="clear">Clear</string>
    <string name="menu_newest">Great Rating</string>
    <string name="menu_oldest">Worst Rating</string>
    <string name="menu_random">Random</string>
    <string name="oke">OKE</string>
    <string name="batal">BATAL</string>
</resources>
